em java change code compile from java 11 to java 8